--- a/TKV2024_files/stylesheet.css
+++ b/TKV2024_files/stylesheet.css
@@ -871,9 +871,12 @@ td
 	{mso-style-parent:style0;
 	color:white;
 	font-weight:700;
-	font-family:Calibri, sans-serif;
-	mso-font-charset:0;
-	text-align:left;
+	text-align:center;
+	vertical-align:middle;
+	border-top:.5pt solid windowtext;
+	border-right:none;
+	border-bottom:none;
+	border-left:.5pt solid windowtext;
 	background:#4F81BD;
 	mso-pattern:black none;}
 .xl176
@@ -883,9 +886,9 @@ td
 	text-align:center;
 	vertical-align:middle;
 	border-top:.5pt solid windowtext;
-	border-right:none;
+	border-right:.5pt solid windowtext;
 	border-bottom:none;
-	border-left:.5pt solid windowtext;
+	border-left:none;
 	background:#4F81BD;
 	mso-pattern:black none;}
 .xl177
@@ -894,10 +897,10 @@ td
 	font-weight:700;
 	text-align:center;
 	vertical-align:middle;
-	border-top:.5pt solid windowtext;
-	border-right:.5pt solid windowtext;
-	border-bottom:none;
-	border-left:none;
+	border-top:none;
+	border-right:none;
+	border-bottom:.5pt solid windowtext;
+	border-left:.5pt solid windowtext;
 	background:#4F81BD;
 	mso-pattern:black none;}
 .xl178
@@ -907,9 +910,9 @@ td
 	text-align:center;
 	vertical-align:middle;
 	border-top:none;
-	border-right:none;
+	border-right:.5pt solid windowtext;
 	border-bottom:.5pt solid windowtext;
-	border-left:.5pt solid windowtext;
+	border-left:none;
 	background:#4F81BD;
 	mso-pattern:black none;}
 .xl179
@@ -918,10 +921,10 @@ td
 	font-weight:700;
 	text-align:center;
 	vertical-align:middle;
-	border-top:none;
-	border-right:.5pt solid windowtext;
+	border-top:.5pt solid windowtext;
+	border-right:none;
 	border-bottom:.5pt solid windowtext;
-	border-left:none;
+	border-left:.5pt solid windowtext;
 	background:#4F81BD;
 	mso-pattern:black none;}
 .xl180
@@ -931,24 +934,12 @@ td
 	text-align:center;
 	vertical-align:middle;
 	border-top:.5pt solid windowtext;
-	border-right:none;
-	border-bottom:.5pt solid windowtext;
-	border-left:.5pt solid windowtext;
-	background:#4F81BD;
-	mso-pattern:black none;}
-.xl181
-	{mso-style-parent:style0;
-	color:white;
-	font-weight:700;
-	text-align:center;
-	vertical-align:middle;
-	border-top:.5pt solid windowtext;
 	border-right:.5pt solid windowtext;
 	border-bottom:.5pt solid windowtext;
 	border-left:none;
 	background:#4F81BD;
 	mso-pattern:black none;}
-.xl182
+.xl181
 	{mso-style-parent:style0;
 	color:white;
 	font-size:34.0pt;
@@ -961,7 +952,7 @@ td
 	border-left:.5pt solid windowtext;
 	background:#4F81BD;
 	mso-pattern:black none;}
-.xl183
+.xl182
 	{mso-style-parent:style0;
 	color:white;
 	font-weight:700;
@@ -973,7 +964,7 @@ td
 	border-left:none;
 	background:#4F81BD;
 	mso-pattern:black none;}
-.xl184
+.xl183
 	{mso-style-parent:style0;
 	color:white;
 	font-weight:700;
@@ -985,7 +976,7 @@ td
 	border-left:none;
 	background:#4F81BD;
 	mso-pattern:black none;}
-.xl185
+.xl184
 	{mso-style-parent:style0;
 	color:white;
 	font-weight:700;
@@ -997,14 +988,14 @@ td
 	border-left:none;
 	background:#4F81BD;
 	mso-pattern:black none;}
-.xl186
+.xl185
 	{mso-style-parent:style0;
 	color:windowtext;
 	mso-number-format:"Short Date";
 	text-align:center;
 	vertical-align:middle;
 	border:.5pt solid windowtext;}
-.xl187
+.xl186
 	{mso-style-parent:style0;
 	color:white;
 	font-size:34.0pt;
@@ -1014,7 +1005,7 @@ td
 	border:.5pt solid windowtext;
 	background:#4F81BD;
 	mso-pattern:black none;}
-.xl188
+.xl187
 	{mso-style-parent:style0;
 	color:white;
 	font-weight:700;
@@ -1026,7 +1017,7 @@ td
 	border-left:none;
 	background:#4F81BD;
 	mso-pattern:black none;}
-.xl189
+.xl188
 	{mso-style-parent:style0;
 	color:white;
 	font-size:34.0pt;
@@ -1039,7 +1030,7 @@ td
 	border-left:.5pt solid black;
 	background:#4F81BD;
 	mso-pattern:black none;}
-.xl190
+.xl189
 	{mso-style-parent:style0;
 	color:white;
 	font-size:34.0pt;
@@ -1052,7 +1043,7 @@ td
 	border-left:none;
 	background:#4F81BD;
 	mso-pattern:black none;}
-.xl191
+.xl190
 	{mso-style-parent:style0;
 	color:white;
 	font-size:34.0pt;
@@ -1065,7 +1056,7 @@ td
 	border-left:none;
 	background:#4F81BD;
 	mso-pattern:black none;}
-.xl192
+.xl191
 	{mso-style-parent:style0;
 	text-align:center;
 	vertical-align:middle;
@@ -1073,7 +1064,7 @@ td
 	border-right:.5pt solid windowtext;
 	border-bottom:none;
 	border-left:.5pt solid windowtext;}
-.xl193
+.xl192
 	{mso-style-parent:style0;
 	color:white;
 	font-weight:700;
@@ -1085,43 +1076,43 @@ td
 	border-left:none;
 	background:#4F81BD;
 	mso-pattern:black none;}
+.xl193
+	{mso-style-parent:style17;
+	mso-number-format:0;
+	text-align:center;
+	vertical-align:middle;
+	border-top:.5pt solid windowtext;
+	border-right:none;
+	border-bottom:.5pt solid windowtext;
+	border-left:.5pt solid windowtext;}
 .xl194
 	{mso-style-parent:style17;
 	mso-number-format:0;
 	text-align:center;
 	vertical-align:middle;
 	border-top:.5pt solid windowtext;
-	border-right:none;
-	border-bottom:.5pt solid windowtext;
-	border-left:.5pt solid windowtext;}
-.xl195
-	{mso-style-parent:style17;
-	mso-number-format:0;
-	text-align:center;
-	vertical-align:middle;
-	border-top:.5pt solid windowtext;
 	border-right:.5pt solid windowtext;
 	border-bottom:.5pt solid windowtext;
 	border-left:none;}
+.xl195
+	{mso-style-parent:style17;
+	mso-number-format:"\#\,\#\#0\\ \0022Kč\0022";
+	text-align:center;
+	vertical-align:middle;
+	border-top:.5pt solid windowtext;
+	border-right:none;
+	border-bottom:.5pt solid windowtext;
+	border-left:.5pt solid windowtext;}
 .xl196
 	{mso-style-parent:style17;
 	mso-number-format:"\#\,\#\#0\\ \0022Kč\0022";
 	text-align:center;
 	vertical-align:middle;
 	border-top:.5pt solid windowtext;
-	border-right:none;
-	border-bottom:.5pt solid windowtext;
-	border-left:.5pt solid windowtext;}
-.xl197
-	{mso-style-parent:style17;
-	mso-number-format:"\#\,\#\#0\\ \0022Kč\0022";
-	text-align:center;
-	vertical-align:middle;
-	border-top:.5pt solid windowtext;
 	border-right:.5pt solid windowtext;
 	border-bottom:.5pt solid windowtext;
 	border-left:none;}
-.xl198
+.xl197
 	{mso-style-parent:style0;
 	color:white;
 	font-size:34.0pt;
@@ -1130,7 +1121,7 @@ td
 	border:.5pt solid windowtext;
 	background:#4F81BD;
 	mso-pattern:black none;}
-.xl199
+.xl198
 	{mso-style-parent:style0;
 	color:windowtext;
 	text-align:center;
@@ -1139,12 +1130,21 @@ td
 	border-right:none;
 	border-bottom:none;
 	border-left:none;}
-.xl200
+.xl199
 	{mso-style-parent:style0;
 	color:windowtext;
 	text-align:center;
 	vertical-align:middle;
 	border-top:.5pt solid windowtext;
+	border-right:.5pt solid windowtext;
+	border-bottom:none;
+	border-left:none;}
+.xl200
+	{mso-style-parent:style0;
+	color:windowtext;
+	text-align:center;
+	vertical-align:middle;
+	border-top:none;
 	border-right:.5pt solid windowtext;
 	border-bottom:none;
 	border-left:none;}
@@ -1154,8 +1154,8 @@ td
 	text-align:center;
 	vertical-align:middle;
 	border-top:none;
-	border-right:.5pt solid windowtext;
-	border-bottom:none;
+	border-right:none;
+	border-bottom:.5pt solid windowtext;
 	border-left:none;}
 .xl202
 	{mso-style-parent:style0;
@@ -1163,19 +1163,10 @@ td
 	text-align:center;
 	vertical-align:middle;
 	border-top:none;
-	border-right:none;
-	border-bottom:.5pt solid windowtext;
-	border-left:none;}
-.xl203
-	{mso-style-parent:style0;
-	color:windowtext;
-	text-align:center;
-	vertical-align:middle;
-	border-top:none;
 	border-right:.5pt solid windowtext;
 	border-bottom:.5pt solid windowtext;
 	border-left:none;}
-.xl204
+.xl203
 	{mso-style-parent:style0;
 	color:windowtext;
 	text-align:center;
@@ -1184,28 +1175,41 @@ td
 	border-right:none;
 	border-bottom:none;
 	border-left:.5pt solid windowtext;}
-.xl205
+.xl204
 	{mso-style-parent:style0;
-	font-family:Calibri, sans-serif;
+	font-family:Calibri;
+	mso-generic-font-family:auto;
 	mso-font-charset:0;
 	text-align:center;
 	vertical-align:middle;}
+.xl205
+	{mso-style-parent:style0;
+	color:white;
+	font-weight:700;
+	font-family:Calibri;
+	mso-generic-font-family:auto;
+	mso-font-charset:0;
+	text-align:center;
+	background:#4F81BD;
+	mso-pattern:black none;}
 .xl206
 	{mso-style-parent:style0;
 	color:white;
 	font-weight:700;
-	font-family:Calibri, sans-serif;
+	font-family:Calibri;
+	mso-generic-font-family:auto;
 	mso-font-charset:0;
 	text-align:center;
+	vertical-align:middle;
 	background:#4F81BD;
 	mso-pattern:black none;}
 .xl207
 	{mso-style-parent:style0;
 	color:white;
 	font-weight:700;
-	font-family:Calibri, sans-serif;
+	font-family:Calibri;
+	mso-generic-font-family:auto;
 	mso-font-charset:0;
-	text-align:center;
-	vertical-align:middle;
+	text-align:left;
 	background:#4F81BD;
 	mso-pattern:black none;}
