--- a/TKV2025_files/stylesheet.css
+++ b/TKV2025_files/stylesheet.css
@@ -820,21 +820,11 @@ td
 	{mso-style-parent:style0;
 	color:white;
 	font-weight:700;
-	font-family:Calibri, sans-serif;
-	mso-font-charset:0;
-	text-align:center;
-	vertical-align:middle;
-	background:#4F81BD;
-	mso-pattern:black none;}
-.xl167
-	{mso-style-parent:style0;
-	color:white;
-	font-weight:700;
 	text-align:center;
 	vertical-align:middle;
 	mso-background-source:auto;
 	mso-pattern:#4F81BD none;}
-.xl168
+.xl167
 	{mso-style-parent:style0;
 	color:white;
 	font-weight:700;
@@ -846,7 +836,7 @@ td
 	border-left:.5pt solid windowtext;
 	background:#4F81BD;
 	mso-pattern:black none;}
-.xl169
+.xl168
 	{mso-style-parent:style0;
 	color:white;
 	font-weight:700;
@@ -856,6 +846,18 @@ td
 	border-right:.5pt solid windowtext;
 	border-bottom:none;
 	border-left:none;
+	background:#4F81BD;
+	mso-pattern:black none;}
+.xl169
+	{mso-style-parent:style0;
+	color:white;
+	font-weight:700;
+	text-align:center;
+	vertical-align:middle;
+	border-top:none;
+	border-right:none;
+	border-bottom:.5pt solid windowtext;
+	border-left:.5pt solid windowtext;
 	background:#4F81BD;
 	mso-pattern:black none;}
 .xl170
@@ -865,9 +867,9 @@ td
 	text-align:center;
 	vertical-align:middle;
 	border-top:none;
-	border-right:none;
+	border-right:.5pt solid windowtext;
 	border-bottom:.5pt solid windowtext;
-	border-left:.5pt solid windowtext;
+	border-left:none;
 	background:#4F81BD;
 	mso-pattern:black none;}
 .xl171
@@ -876,15 +878,16 @@ td
 	font-weight:700;
 	text-align:center;
 	vertical-align:middle;
-	border-top:none;
-	border-right:.5pt solid windowtext;
+	border-top:.5pt solid windowtext;
+	border-right:none;
 	border-bottom:.5pt solid windowtext;
-	border-left:none;
+	border-left:.5pt solid windowtext;
 	background:#4F81BD;
 	mso-pattern:black none;}
 .xl172
 	{mso-style-parent:style0;
 	color:white;
+	font-size:34.0pt;
 	font-weight:700;
 	text-align:center;
 	vertical-align:middle;
@@ -897,19 +900,6 @@ td
 .xl173
 	{mso-style-parent:style0;
 	color:white;
-	font-size:34.0pt;
-	font-weight:700;
-	text-align:center;
-	vertical-align:middle;
-	border-top:.5pt solid windowtext;
-	border-right:none;
-	border-bottom:.5pt solid windowtext;
-	border-left:.5pt solid windowtext;
-	background:#4F81BD;
-	mso-pattern:black none;}
-.xl174
-	{mso-style-parent:style0;
-	color:white;
 	font-weight:700;
 	text-align:center;
 	vertical-align:middle;
@@ -919,7 +909,7 @@ td
 	border-left:none;
 	background:#4F81BD;
 	mso-pattern:black none;}
-.xl175
+.xl174
 	{mso-style-parent:style0;
 	color:white;
 	font-weight:700;
@@ -931,7 +921,7 @@ td
 	border-left:none;
 	background:#4F81BD;
 	mso-pattern:black none;}
-.xl176
+.xl175
 	{mso-style-parent:style0;
 	color:white;
 	font-weight:700;
@@ -943,14 +933,14 @@ td
 	border-left:none;
 	background:#4F81BD;
 	mso-pattern:black none;}
-.xl177
+.xl176
 	{mso-style-parent:style0;
 	color:windowtext;
 	mso-number-format:"Short Date";
 	text-align:center;
 	vertical-align:middle;
 	border:.5pt solid windowtext;}
-.xl178
+.xl177
 	{mso-style-parent:style0;
 	color:white;
 	font-size:34.0pt;
@@ -960,7 +950,7 @@ td
 	border:.5pt solid windowtext;
 	background:#4F81BD;
 	mso-pattern:black none;}
-.xl179
+.xl178
 	{mso-style-parent:style0;
 	color:white;
 	font-weight:700;
@@ -972,7 +962,7 @@ td
 	border-left:none;
 	background:#4F81BD;
 	mso-pattern:black none;}
-.xl180
+.xl179
 	{mso-style-parent:style0;
 	color:white;
 	font-size:34.0pt;
@@ -985,7 +975,7 @@ td
 	border-left:.5pt solid black;
 	background:#4F81BD;
 	mso-pattern:black none;}
-.xl181
+.xl180
 	{mso-style-parent:style0;
 	color:white;
 	font-size:34.0pt;
@@ -998,7 +988,7 @@ td
 	border-left:none;
 	background:#4F81BD;
 	mso-pattern:black none;}
-.xl182
+.xl181
 	{mso-style-parent:style0;
 	color:white;
 	font-size:34.0pt;
@@ -1011,7 +1001,7 @@ td
 	border-left:none;
 	background:#4F81BD;
 	mso-pattern:black none;}
-.xl183
+.xl182
 	{mso-style-parent:style0;
 	text-align:center;
 	vertical-align:middle;
@@ -1019,7 +1009,7 @@ td
 	border-right:.5pt solid windowtext;
 	border-bottom:none;
 	border-left:.5pt solid windowtext;}
-.xl184
+.xl183
 	{mso-style-parent:style0;
 	text-align:center;
 	vertical-align:middle;
@@ -1027,43 +1017,43 @@ td
 	border-right:.5pt solid windowtext;
 	border-bottom:none;
 	border-left:.5pt solid windowtext;}
+.xl184
+	{mso-style-parent:style17;
+	mso-number-format:0;
+	text-align:center;
+	vertical-align:middle;
+	border-top:.5pt solid windowtext;
+	border-right:none;
+	border-bottom:.5pt solid windowtext;
+	border-left:.5pt solid windowtext;}
 .xl185
 	{mso-style-parent:style17;
 	mso-number-format:0;
 	text-align:center;
 	vertical-align:middle;
 	border-top:.5pt solid windowtext;
-	border-right:none;
-	border-bottom:.5pt solid windowtext;
-	border-left:.5pt solid windowtext;}
-.xl186
-	{mso-style-parent:style17;
-	mso-number-format:0;
-	text-align:center;
-	vertical-align:middle;
-	border-top:.5pt solid windowtext;
 	border-right:.5pt solid windowtext;
 	border-bottom:.5pt solid windowtext;
 	border-left:none;}
+.xl186
+	{mso-style-parent:style17;
+	mso-number-format:"\#\,\#\#0\\ \0022Kč\0022";
+	text-align:center;
+	vertical-align:middle;
+	border-top:.5pt solid windowtext;
+	border-right:none;
+	border-bottom:.5pt solid windowtext;
+	border-left:.5pt solid windowtext;}
 .xl187
 	{mso-style-parent:style17;
 	mso-number-format:"\#\,\#\#0\\ \0022Kč\0022";
 	text-align:center;
 	vertical-align:middle;
 	border-top:.5pt solid windowtext;
-	border-right:none;
-	border-bottom:.5pt solid windowtext;
-	border-left:.5pt solid windowtext;}
-.xl188
-	{mso-style-parent:style17;
-	mso-number-format:"\#\,\#\#0\\ \0022Kč\0022";
-	text-align:center;
-	vertical-align:middle;
-	border-top:.5pt solid windowtext;
 	border-right:.5pt solid windowtext;
 	border-bottom:.5pt solid windowtext;
 	border-left:none;}
-.xl189
+.xl188
 	{mso-style-parent:style0;
 	color:white;
 	font-size:34.0pt;
@@ -1072,7 +1062,7 @@ td
 	border:.5pt solid windowtext;
 	background:#4F81BD;
 	mso-pattern:black none;}
-.xl190
+.xl189
 	{mso-style-parent:style0;
 	color:windowtext;
 	text-align:center;
@@ -1081,12 +1071,21 @@ td
 	border-right:none;
 	border-bottom:none;
 	border-left:none;}
-.xl191
+.xl190
 	{mso-style-parent:style0;
 	color:windowtext;
 	text-align:center;
 	vertical-align:middle;
 	border-top:.5pt solid windowtext;
+	border-right:.5pt solid windowtext;
+	border-bottom:none;
+	border-left:none;}
+.xl191
+	{mso-style-parent:style0;
+	color:windowtext;
+	text-align:center;
+	vertical-align:middle;
+	border-top:none;
 	border-right:.5pt solid windowtext;
 	border-bottom:none;
 	border-left:none;}
@@ -1096,8 +1095,8 @@ td
 	text-align:center;
 	vertical-align:middle;
 	border-top:none;
-	border-right:.5pt solid windowtext;
-	border-bottom:none;
+	border-right:none;
+	border-bottom:.5pt solid windowtext;
 	border-left:none;}
 .xl193
 	{mso-style-parent:style0;
@@ -1105,19 +1104,10 @@ td
 	text-align:center;
 	vertical-align:middle;
 	border-top:none;
-	border-right:none;
-	border-bottom:.5pt solid windowtext;
-	border-left:none;}
-.xl194
-	{mso-style-parent:style0;
-	color:windowtext;
-	text-align:center;
-	vertical-align:middle;
-	border-top:none;
 	border-right:.5pt solid windowtext;
 	border-bottom:.5pt solid windowtext;
 	border-left:none;}
-.xl195
+.xl194
 	{mso-style-parent:style0;
 	color:windowtext;
 	text-align:center;
@@ -1126,9 +1116,21 @@ td
 	border-right:none;
 	border-bottom:none;
 	border-left:.5pt solid windowtext;}
-.xl196
+.xl195
 	{mso-style-parent:style0;
-	font-family:Calibri, sans-serif;
+	font-family:Calibri;
+	mso-generic-font-family:auto;
 	mso-font-charset:0;
 	text-align:center;
 	vertical-align:middle;}
+.xl196
+	{mso-style-parent:style0;
+	color:white;
+	font-weight:700;
+	font-family:Calibri;
+	mso-generic-font-family:auto;
+	mso-font-charset:0;
+	text-align:center;
+	vertical-align:middle;
+	background:#4F81BD;
+	mso-pattern:black none;}
