--- a/TKV2025_files/stylesheet.css
+++ b/TKV2025_files/stylesheet.css
@@ -822,21 +822,13 @@ td
 	font-weight:700;
 	text-align:center;
 	vertical-align:middle;
-	mso-background-source:auto;
-	mso-pattern:#4F81BD none;}
-.xl167
-	{mso-style-parent:style0;
-	color:white;
-	font-weight:700;
-	text-align:center;
-	vertical-align:middle;
 	border-top:.5pt solid windowtext;
 	border-right:none;
 	border-bottom:none;
 	border-left:.5pt solid windowtext;
 	background:#4F81BD;
 	mso-pattern:black none;}
-.xl168
+.xl167
 	{mso-style-parent:style0;
 	color:white;
 	font-weight:700;
@@ -846,6 +838,18 @@ td
 	border-right:.5pt solid windowtext;
 	border-bottom:none;
 	border-left:none;
+	background:#4F81BD;
+	mso-pattern:black none;}
+.xl168
+	{mso-style-parent:style0;
+	color:white;
+	font-weight:700;
+	text-align:center;
+	vertical-align:middle;
+	border-top:none;
+	border-right:none;
+	border-bottom:.5pt solid windowtext;
+	border-left:.5pt solid windowtext;
 	background:#4F81BD;
 	mso-pattern:black none;}
 .xl169
@@ -855,9 +859,9 @@ td
 	text-align:center;
 	vertical-align:middle;
 	border-top:none;
-	border-right:none;
+	border-right:.5pt solid windowtext;
 	border-bottom:.5pt solid windowtext;
-	border-left:.5pt solid windowtext;
+	border-left:none;
 	background:#4F81BD;
 	mso-pattern:black none;}
 .xl170
@@ -866,15 +870,16 @@ td
 	font-weight:700;
 	text-align:center;
 	vertical-align:middle;
-	border-top:none;
-	border-right:.5pt solid windowtext;
+	border-top:.5pt solid windowtext;
+	border-right:none;
 	border-bottom:.5pt solid windowtext;
-	border-left:none;
+	border-left:.5pt solid windowtext;
 	background:#4F81BD;
 	mso-pattern:black none;}
 .xl171
 	{mso-style-parent:style0;
 	color:white;
+	font-size:34.0pt;
 	font-weight:700;
 	text-align:center;
 	vertical-align:middle;
@@ -887,19 +892,6 @@ td
 .xl172
 	{mso-style-parent:style0;
 	color:white;
-	font-size:34.0pt;
-	font-weight:700;
-	text-align:center;
-	vertical-align:middle;
-	border-top:.5pt solid windowtext;
-	border-right:none;
-	border-bottom:.5pt solid windowtext;
-	border-left:.5pt solid windowtext;
-	background:#4F81BD;
-	mso-pattern:black none;}
-.xl173
-	{mso-style-parent:style0;
-	color:white;
 	font-weight:700;
 	text-align:center;
 	vertical-align:middle;
@@ -909,7 +901,7 @@ td
 	border-left:none;
 	background:#4F81BD;
 	mso-pattern:black none;}
-.xl174
+.xl173
 	{mso-style-parent:style0;
 	color:white;
 	font-weight:700;
@@ -921,7 +913,7 @@ td
 	border-left:none;
 	background:#4F81BD;
 	mso-pattern:black none;}
-.xl175
+.xl174
 	{mso-style-parent:style0;
 	color:white;
 	font-weight:700;
@@ -933,14 +925,14 @@ td
 	border-left:none;
 	background:#4F81BD;
 	mso-pattern:black none;}
-.xl176
+.xl175
 	{mso-style-parent:style0;
 	color:windowtext;
 	mso-number-format:"Short Date";
 	text-align:center;
 	vertical-align:middle;
 	border:.5pt solid windowtext;}
-.xl177
+.xl176
 	{mso-style-parent:style0;
 	color:white;
 	font-size:34.0pt;
@@ -950,7 +942,7 @@ td
 	border:.5pt solid windowtext;
 	background:#4F81BD;
 	mso-pattern:black none;}
-.xl178
+.xl177
 	{mso-style-parent:style0;
 	color:white;
 	font-weight:700;
@@ -962,7 +954,7 @@ td
 	border-left:none;
 	background:#4F81BD;
 	mso-pattern:black none;}
-.xl179
+.xl178
 	{mso-style-parent:style0;
 	color:white;
 	font-size:34.0pt;
@@ -975,7 +967,7 @@ td
 	border-left:.5pt solid black;
 	background:#4F81BD;
 	mso-pattern:black none;}
-.xl180
+.xl179
 	{mso-style-parent:style0;
 	color:white;
 	font-size:34.0pt;
@@ -988,7 +980,7 @@ td
 	border-left:none;
 	background:#4F81BD;
 	mso-pattern:black none;}
-.xl181
+.xl180
 	{mso-style-parent:style0;
 	color:white;
 	font-size:34.0pt;
@@ -1001,7 +993,7 @@ td
 	border-left:none;
 	background:#4F81BD;
 	mso-pattern:black none;}
-.xl182
+.xl181
 	{mso-style-parent:style0;
 	text-align:center;
 	vertical-align:middle;
@@ -1009,7 +1001,7 @@ td
 	border-right:.5pt solid windowtext;
 	border-bottom:none;
 	border-left:.5pt solid windowtext;}
-.xl183
+.xl182
 	{mso-style-parent:style0;
 	text-align:center;
 	vertical-align:middle;
@@ -1017,43 +1009,43 @@ td
 	border-right:.5pt solid windowtext;
 	border-bottom:none;
 	border-left:.5pt solid windowtext;}
+.xl183
+	{mso-style-parent:style17;
+	mso-number-format:0;
+	text-align:center;
+	vertical-align:middle;
+	border-top:.5pt solid windowtext;
+	border-right:none;
+	border-bottom:.5pt solid windowtext;
+	border-left:.5pt solid windowtext;}
 .xl184
 	{mso-style-parent:style17;
 	mso-number-format:0;
 	text-align:center;
 	vertical-align:middle;
 	border-top:.5pt solid windowtext;
-	border-right:none;
-	border-bottom:.5pt solid windowtext;
-	border-left:.5pt solid windowtext;}
-.xl185
-	{mso-style-parent:style17;
-	mso-number-format:0;
-	text-align:center;
-	vertical-align:middle;
-	border-top:.5pt solid windowtext;
 	border-right:.5pt solid windowtext;
 	border-bottom:.5pt solid windowtext;
 	border-left:none;}
+.xl185
+	{mso-style-parent:style17;
+	mso-number-format:"\#\,\#\#0\\ \0022Kč\0022";
+	text-align:center;
+	vertical-align:middle;
+	border-top:.5pt solid windowtext;
+	border-right:none;
+	border-bottom:.5pt solid windowtext;
+	border-left:.5pt solid windowtext;}
 .xl186
 	{mso-style-parent:style17;
 	mso-number-format:"\#\,\#\#0\\ \0022Kč\0022";
 	text-align:center;
 	vertical-align:middle;
 	border-top:.5pt solid windowtext;
-	border-right:none;
-	border-bottom:.5pt solid windowtext;
-	border-left:.5pt solid windowtext;}
-.xl187
-	{mso-style-parent:style17;
-	mso-number-format:"\#\,\#\#0\\ \0022Kč\0022";
-	text-align:center;
-	vertical-align:middle;
-	border-top:.5pt solid windowtext;
 	border-right:.5pt solid windowtext;
 	border-bottom:.5pt solid windowtext;
 	border-left:none;}
-.xl188
+.xl187
 	{mso-style-parent:style0;
 	color:white;
 	font-size:34.0pt;
@@ -1062,7 +1054,21 @@ td
 	border:.5pt solid windowtext;
 	background:#4F81BD;
 	mso-pattern:black none;}
+.xl188
+	{mso-style-parent:style0;
+	color:white;
+	font-weight:700;
+	text-align:center;
+	background:#4F81BD;
+	mso-pattern:black none;}
 .xl189
+	{mso-style-parent:style0;
+	color:white;
+	font-weight:700;
+	text-align:left;
+	mso-background-source:auto;
+	mso-pattern:#4F81BD none;}
+.xl190
 	{mso-style-parent:style0;
 	color:windowtext;
 	text-align:center;
@@ -1071,21 +1077,12 @@ td
 	border-right:none;
 	border-bottom:none;
 	border-left:none;}
-.xl190
-	{mso-style-parent:style0;
-	color:windowtext;
-	text-align:center;
-	vertical-align:middle;
-	border-top:.5pt solid windowtext;
-	border-right:.5pt solid windowtext;
-	border-bottom:none;
-	border-left:none;}
 .xl191
 	{mso-style-parent:style0;
 	color:windowtext;
 	text-align:center;
 	vertical-align:middle;
-	border-top:none;
+	border-top:.5pt solid windowtext;
 	border-right:.5pt solid windowtext;
 	border-bottom:none;
 	border-left:none;}
@@ -1095,10 +1092,19 @@ td
 	text-align:center;
 	vertical-align:middle;
 	border-top:none;
+	border-right:.5pt solid windowtext;
+	border-bottom:none;
+	border-left:none;}
+.xl193
+	{mso-style-parent:style0;
+	color:windowtext;
+	text-align:center;
+	vertical-align:middle;
+	border-top:none;
 	border-right:none;
 	border-bottom:.5pt solid windowtext;
 	border-left:none;}
-.xl193
+.xl194
 	{mso-style-parent:style0;
 	color:windowtext;
 	text-align:center;
@@ -1107,7 +1113,7 @@ td
 	border-right:.5pt solid windowtext;
 	border-bottom:.5pt solid windowtext;
 	border-left:none;}
-.xl194
+.xl195
 	{mso-style-parent:style0;
 	color:windowtext;
 	text-align:center;
@@ -1116,21 +1122,18 @@ td
 	border-right:none;
 	border-bottom:none;
 	border-left:.5pt solid windowtext;}
-.xl195
+.xl196
 	{mso-style-parent:style0;
-	font-family:Calibri;
-	mso-generic-font-family:auto;
+	font-family:Calibri, sans-serif;
 	mso-font-charset:0;
 	text-align:center;
 	vertical-align:middle;}
-.xl196
+.xl197
 	{mso-style-parent:style0;
 	color:white;
 	font-weight:700;
-	font-family:Calibri;
-	mso-generic-font-family:auto;
+	font-family:Calibri, sans-serif;
 	mso-font-charset:0;
-	text-align:center;
-	vertical-align:middle;
+	text-align:left;
 	background:#4F81BD;
 	mso-pattern:black none;}
