--- a/TKV2025_files/stylesheet.css
+++ b/TKV2025_files/stylesheet.css
@@ -821,31 +821,23 @@ td
 	color:white;
 	font-weight:700;
 	text-align:center;
-	vertical-align:middle;
-	mso-background-source:auto;
-	mso-pattern:#4F81BD none;}
+	background:#4F81BD;
+	mso-pattern:black none;}
 .xl167
 	{mso-style-parent:style0;
 	color:white;
 	font-weight:700;
-	text-align:center;
-	vertical-align:middle;
-	border-top:.5pt solid windowtext;
-	border-right:none;
-	border-bottom:none;
-	border-left:.5pt solid windowtext;
-	background:#4F81BD;
-	mso-pattern:black none;}
+	text-align:left;
+	mso-background-source:auto;
+	mso-pattern:#4F81BD none;}
 .xl168
 	{mso-style-parent:style0;
 	color:white;
 	font-weight:700;
-	text-align:center;
-	vertical-align:middle;
-	border-top:.5pt solid windowtext;
-	border-right:.5pt solid windowtext;
-	border-bottom:none;
-	border-left:none;
+	font-family:Calibri;
+	mso-generic-font-family:auto;
+	mso-font-charset:0;
+	text-align:left;
 	background:#4F81BD;
 	mso-pattern:black none;}
 .xl169
@@ -854,9 +846,9 @@ td
 	font-weight:700;
 	text-align:center;
 	vertical-align:middle;
-	border-top:none;
+	border-top:.5pt solid windowtext;
 	border-right:none;
-	border-bottom:.5pt solid windowtext;
+	border-bottom:none;
 	border-left:.5pt solid windowtext;
 	background:#4F81BD;
 	mso-pattern:black none;}
@@ -866,9 +858,9 @@ td
 	font-weight:700;
 	text-align:center;
 	vertical-align:middle;
-	border-top:none;
+	border-top:.5pt solid windowtext;
 	border-right:.5pt solid windowtext;
-	border-bottom:.5pt solid windowtext;
+	border-bottom:none;
 	border-left:none;
 	background:#4F81BD;
 	mso-pattern:black none;}
@@ -878,7 +870,7 @@ td
 	font-weight:700;
 	text-align:center;
 	vertical-align:middle;
-	border-top:.5pt solid windowtext;
+	border-top:none;
 	border-right:none;
 	border-bottom:.5pt solid windowtext;
 	border-left:.5pt solid windowtext;
@@ -887,14 +879,13 @@ td
 .xl172
 	{mso-style-parent:style0;
 	color:white;
-	font-size:34.0pt;
 	font-weight:700;
 	text-align:center;
 	vertical-align:middle;
-	border-top:.5pt solid windowtext;
-	border-right:none;
+	border-top:none;
+	border-right:.5pt solid windowtext;
 	border-bottom:.5pt solid windowtext;
-	border-left:.5pt solid windowtext;
+	border-left:none;
 	background:#4F81BD;
 	mso-pattern:black none;}
 .xl173
@@ -905,11 +896,36 @@ td
 	vertical-align:middle;
 	border-top:.5pt solid windowtext;
 	border-right:none;
+	border-bottom:.5pt solid windowtext;
+	border-left:.5pt solid windowtext;
+	background:#4F81BD;
+	mso-pattern:black none;}
+.xl174
+	{mso-style-parent:style0;
+	color:white;
+	font-size:34.0pt;
+	font-weight:700;
+	text-align:center;
+	vertical-align:middle;
+	border-top:.5pt solid windowtext;
+	border-right:none;
+	border-bottom:.5pt solid windowtext;
+	border-left:.5pt solid windowtext;
+	background:#4F81BD;
+	mso-pattern:black none;}
+.xl175
+	{mso-style-parent:style0;
+	color:white;
+	font-weight:700;
+	text-align:center;
+	vertical-align:middle;
+	border-top:.5pt solid windowtext;
+	border-right:none;
 	border-bottom:none;
 	border-left:none;
 	background:#4F81BD;
 	mso-pattern:black none;}
-.xl174
+.xl176
 	{mso-style-parent:style0;
 	color:white;
 	font-weight:700;
@@ -921,7 +937,7 @@ td
 	border-left:none;
 	background:#4F81BD;
 	mso-pattern:black none;}
-.xl175
+.xl177
 	{mso-style-parent:style0;
 	color:white;
 	font-weight:700;
@@ -933,14 +949,14 @@ td
 	border-left:none;
 	background:#4F81BD;
 	mso-pattern:black none;}
-.xl176
+.xl178
 	{mso-style-parent:style0;
 	color:windowtext;
 	mso-number-format:"Short Date";
 	text-align:center;
 	vertical-align:middle;
 	border:.5pt solid windowtext;}
-.xl177
+.xl179
 	{mso-style-parent:style0;
 	color:white;
 	font-size:34.0pt;
@@ -950,7 +966,7 @@ td
 	border:.5pt solid windowtext;
 	background:#4F81BD;
 	mso-pattern:black none;}
-.xl178
+.xl180
 	{mso-style-parent:style0;
 	color:white;
 	font-weight:700;
@@ -962,7 +978,7 @@ td
 	border-left:none;
 	background:#4F81BD;
 	mso-pattern:black none;}
-.xl179
+.xl181
 	{mso-style-parent:style0;
 	color:white;
 	font-size:34.0pt;
@@ -975,7 +991,7 @@ td
 	border-left:.5pt solid black;
 	background:#4F81BD;
 	mso-pattern:black none;}
-.xl180
+.xl182
 	{mso-style-parent:style0;
 	color:white;
 	font-size:34.0pt;
@@ -988,7 +1004,7 @@ td
 	border-left:none;
 	background:#4F81BD;
 	mso-pattern:black none;}
-.xl181
+.xl183
 	{mso-style-parent:style0;
 	color:white;
 	font-size:34.0pt;
@@ -1001,7 +1017,7 @@ td
 	border-left:none;
 	background:#4F81BD;
 	mso-pattern:black none;}
-.xl182
+.xl184
 	{mso-style-parent:style0;
 	text-align:center;
 	vertical-align:middle;
@@ -1009,7 +1025,7 @@ td
 	border-right:.5pt solid windowtext;
 	border-bottom:none;
 	border-left:.5pt solid windowtext;}
-.xl183
+.xl185
 	{mso-style-parent:style0;
 	text-align:center;
 	vertical-align:middle;
@@ -1017,27 +1033,9 @@ td
 	border-right:.5pt solid windowtext;
 	border-bottom:none;
 	border-left:.5pt solid windowtext;}
-.xl184
-	{mso-style-parent:style17;
-	mso-number-format:0;
-	text-align:center;
-	vertical-align:middle;
-	border-top:.5pt solid windowtext;
-	border-right:none;
-	border-bottom:.5pt solid windowtext;
-	border-left:.5pt solid windowtext;}
-.xl185
-	{mso-style-parent:style17;
-	mso-number-format:0;
-	text-align:center;
-	vertical-align:middle;
-	border-top:.5pt solid windowtext;
-	border-right:.5pt solid windowtext;
-	border-bottom:.5pt solid windowtext;
-	border-left:none;}
 .xl186
 	{mso-style-parent:style17;
-	mso-number-format:"\#\,\#\#0\\ \0022Kč\0022";
+	mso-number-format:0;
 	text-align:center;
 	vertical-align:middle;
 	border-top:.5pt solid windowtext;
@@ -1046,7 +1044,7 @@ td
 	border-left:.5pt solid windowtext;}
 .xl187
 	{mso-style-parent:style17;
-	mso-number-format:"\#\,\#\#0\\ \0022Kč\0022";
+	mso-number-format:0;
 	text-align:center;
 	vertical-align:middle;
 	border-top:.5pt solid windowtext;
@@ -1054,6 +1052,24 @@ td
 	border-bottom:.5pt solid windowtext;
 	border-left:none;}
 .xl188
+	{mso-style-parent:style17;
+	mso-number-format:"\#\,\#\#0\\ \0022Kč\0022";
+	text-align:center;
+	vertical-align:middle;
+	border-top:.5pt solid windowtext;
+	border-right:none;
+	border-bottom:.5pt solid windowtext;
+	border-left:.5pt solid windowtext;}
+.xl189
+	{mso-style-parent:style17;
+	mso-number-format:"\#\,\#\#0\\ \0022Kč\0022";
+	text-align:center;
+	vertical-align:middle;
+	border-top:.5pt solid windowtext;
+	border-right:.5pt solid windowtext;
+	border-bottom:.5pt solid windowtext;
+	border-left:none;}
+.xl190
 	{mso-style-parent:style0;
 	color:white;
 	font-size:34.0pt;
@@ -1062,31 +1078,13 @@ td
 	border:.5pt solid windowtext;
 	background:#4F81BD;
 	mso-pattern:black none;}
-.xl189
+.xl191
 	{mso-style-parent:style0;
 	color:windowtext;
 	text-align:center;
 	vertical-align:middle;
 	border-top:.5pt solid windowtext;
 	border-right:none;
-	border-bottom:none;
-	border-left:none;}
-.xl190
-	{mso-style-parent:style0;
-	color:windowtext;
-	text-align:center;
-	vertical-align:middle;
-	border-top:.5pt solid windowtext;
-	border-right:.5pt solid windowtext;
-	border-bottom:none;
-	border-left:none;}
-.xl191
-	{mso-style-parent:style0;
-	color:windowtext;
-	text-align:center;
-	vertical-align:middle;
-	border-top:none;
-	border-right:.5pt solid windowtext;
 	border-bottom:none;
 	border-left:none;}
 .xl192
@@ -1094,9 +1092,9 @@ td
 	color:windowtext;
 	text-align:center;
 	vertical-align:middle;
-	border-top:none;
-	border-right:none;
-	border-bottom:.5pt solid windowtext;
+	border-top:.5pt solid windowtext;
+	border-right:.5pt solid windowtext;
+	border-bottom:none;
 	border-left:none;}
 .xl193
 	{mso-style-parent:style0;
@@ -1105,9 +1103,27 @@ td
 	vertical-align:middle;
 	border-top:none;
 	border-right:.5pt solid windowtext;
-	border-bottom:.5pt solid windowtext;
+	border-bottom:none;
 	border-left:none;}
 .xl194
+	{mso-style-parent:style0;
+	color:windowtext;
+	text-align:center;
+	vertical-align:middle;
+	border-top:none;
+	border-right:none;
+	border-bottom:.5pt solid windowtext;
+	border-left:none;}
+.xl195
+	{mso-style-parent:style0;
+	color:windowtext;
+	text-align:center;
+	vertical-align:middle;
+	border-top:none;
+	border-right:.5pt solid windowtext;
+	border-bottom:.5pt solid windowtext;
+	border-left:none;}
+.xl196
 	{mso-style-parent:style0;
 	color:windowtext;
 	text-align:center;
@@ -1116,21 +1132,10 @@ td
 	border-right:none;
 	border-bottom:none;
 	border-left:.5pt solid windowtext;}
-.xl195
+.xl197
 	{mso-style-parent:style0;
 	font-family:Calibri;
 	mso-generic-font-family:auto;
 	mso-font-charset:0;
 	text-align:center;
 	vertical-align:middle;}
-.xl196
-	{mso-style-parent:style0;
-	color:white;
-	font-weight:700;
-	font-family:Calibri;
-	mso-generic-font-family:auto;
-	mso-font-charset:0;
-	text-align:center;
-	vertical-align:middle;
-	background:#4F81BD;
-	mso-pattern:black none;}
