--- a/TKV2025_soubory/stylesheet.css
+++ b/TKV2025_soubory/stylesheet.css
@@ -827,67 +827,43 @@ td
 	{mso-style-parent:style0;
 	color:white;
 	font-weight:700;
+	text-align:left;
+	mso-background-source:auto;
+	mso-pattern:#4F81BD none;}
+.xl168
+	{mso-style-parent:style0;
+	color:white;
+	font-weight:700;
 	font-family:Calibri;
 	mso-generic-font-family:auto;
 	mso-font-charset:0;
 	text-align:left;
 	background:#4F81BD;
 	mso-pattern:black none;}
-.xl168
-	{mso-style-parent:style0;
-	color:white;
-	font-weight:700;
-	text-align:left;
-	mso-background-source:auto;
-	mso-pattern:#4F81BD none;}
 .xl169
 	{mso-style-parent:style0;
-	color:white;
-	font-weight:700;
 	text-align:center;
 	vertical-align:middle;
 	border-top:.5pt solid windowtext;
 	border-right:none;
-	border-bottom:none;
-	border-left:.5pt solid windowtext;
-	background:#4F81BD;
-	mso-pattern:black none;}
+	border-bottom:.5pt solid windowtext;
+	border-left:none;}
 .xl170
-	{mso-style-parent:style0;
-	color:white;
-	font-weight:700;
-	text-align:center;
+	{mso-style-parent:style17;
+	mso-number-format:0;
 	vertical-align:middle;
-	border-top:.5pt solid windowtext;
-	border-right:.5pt solid windowtext;
-	border-bottom:none;
-	border-left:none;
-	background:#4F81BD;
-	mso-pattern:black none;}
+	border:.5pt solid windowtext;}
 .xl171
-	{mso-style-parent:style0;
-	color:white;
+	{mso-style-parent:style16;
 	font-weight:700;
+	mso-number-format:"_-* \#\,\#\#0\\ \0022Kč\0022_-\;\\-* \#\,\#\#0\\ \0022Kč\0022_-\;_-* \0022-\0022??\\ \0022Kč\0022_-\;_-\@_-";
 	text-align:center;
-	vertical-align:middle;
-	border-top:none;
-	border-right:none;
-	border-bottom:.5pt solid windowtext;
-	border-left:.5pt solid windowtext;
-	background:#4F81BD;
-	mso-pattern:black none;}
+	vertical-align:middle;}
 .xl172
-	{mso-style-parent:style0;
-	color:white;
-	font-weight:700;
-	text-align:center;
+	{mso-style-parent:style17;
+	mso-number-format:"0\.0";
 	vertical-align:middle;
-	border-top:none;
-	border-right:.5pt solid windowtext;
-	border-bottom:.5pt solid windowtext;
-	border-left:none;
-	background:#4F81BD;
-	mso-pattern:black none;}
+	border:.5pt solid windowtext;}
 .xl173
 	{mso-style-parent:style0;
 	color:white;
@@ -896,21 +872,20 @@ td
 	vertical-align:middle;
 	border-top:.5pt solid windowtext;
 	border-right:none;
-	border-bottom:.5pt solid windowtext;
+	border-bottom:none;
 	border-left:.5pt solid windowtext;
 	background:#4F81BD;
 	mso-pattern:black none;}
 .xl174
 	{mso-style-parent:style0;
 	color:white;
-	font-size:34.0pt;
 	font-weight:700;
 	text-align:center;
 	vertical-align:middle;
 	border-top:.5pt solid windowtext;
-	border-right:none;
-	border-bottom:.5pt solid windowtext;
-	border-left:.5pt solid windowtext;
+	border-right:.5pt solid windowtext;
+	border-bottom:none;
+	border-left:none;
 	background:#4F81BD;
 	mso-pattern:black none;}
 .xl175
@@ -919,10 +894,10 @@ td
 	font-weight:700;
 	text-align:center;
 	vertical-align:middle;
-	border-top:.5pt solid windowtext;
+	border-top:none;
 	border-right:none;
-	border-bottom:none;
-	border-left:none;
+	border-bottom:.5pt solid windowtext;
+	border-left:.5pt solid windowtext;
 	background:#4F81BD;
 	mso-pattern:black none;}
 .xl176
@@ -932,7 +907,7 @@ td
 	text-align:center;
 	vertical-align:middle;
 	border-top:none;
-	border-right:none;
+	border-right:.5pt solid windowtext;
 	border-bottom:.5pt solid windowtext;
 	border-left:none;
 	background:#4F81BD;
@@ -944,19 +919,68 @@ td
 	text-align:center;
 	vertical-align:middle;
 	border-top:.5pt solid windowtext;
+	border-right:none;
+	border-bottom:.5pt solid windowtext;
+	border-left:.5pt solid windowtext;
+	background:#4F81BD;
+	mso-pattern:black none;}
+.xl178
+	{mso-style-parent:style0;
+	color:white;
+	font-size:34.0pt;
+	font-weight:700;
+	text-align:center;
+	vertical-align:middle;
+	border-top:.5pt solid windowtext;
+	border-right:none;
+	border-bottom:.5pt solid windowtext;
+	border-left:.5pt solid windowtext;
+	background:#4F81BD;
+	mso-pattern:black none;}
+.xl179
+	{mso-style-parent:style0;
+	color:white;
+	font-weight:700;
+	text-align:center;
+	vertical-align:middle;
+	border-top:.5pt solid windowtext;
+	border-right:none;
+	border-bottom:none;
+	border-left:none;
+	background:#4F81BD;
+	mso-pattern:black none;}
+.xl180
+	{mso-style-parent:style0;
+	color:white;
+	font-weight:700;
+	text-align:center;
+	vertical-align:middle;
+	border-top:none;
+	border-right:none;
+	border-bottom:.5pt solid windowtext;
+	border-left:none;
+	background:#4F81BD;
+	mso-pattern:black none;}
+.xl181
+	{mso-style-parent:style0;
+	color:white;
+	font-weight:700;
+	text-align:center;
+	vertical-align:middle;
+	border-top:.5pt solid windowtext;
 	border-right:.5pt solid windowtext;
 	border-bottom:.5pt solid windowtext;
 	border-left:none;
 	background:#4F81BD;
 	mso-pattern:black none;}
-.xl178
+.xl182
 	{mso-style-parent:style0;
 	color:windowtext;
 	mso-number-format:"Short Date";
 	text-align:center;
 	vertical-align:middle;
 	border:.5pt solid windowtext;}
-.xl179
+.xl183
 	{mso-style-parent:style0;
 	color:white;
 	font-size:34.0pt;
@@ -966,7 +990,7 @@ td
 	border:.5pt solid windowtext;
 	background:#4F81BD;
 	mso-pattern:black none;}
-.xl180
+.xl184
 	{mso-style-parent:style0;
 	color:white;
 	font-weight:700;
@@ -978,7 +1002,7 @@ td
 	border-left:none;
 	background:#4F81BD;
 	mso-pattern:black none;}
-.xl181
+.xl185
 	{mso-style-parent:style0;
 	color:white;
 	font-size:34.0pt;
@@ -991,7 +1015,7 @@ td
 	border-left:.5pt solid black;
 	background:#4F81BD;
 	mso-pattern:black none;}
-.xl182
+.xl186
 	{mso-style-parent:style0;
 	color:white;
 	font-size:34.0pt;
@@ -1004,7 +1028,7 @@ td
 	border-left:none;
 	background:#4F81BD;
 	mso-pattern:black none;}
-.xl183
+.xl187
 	{mso-style-parent:style0;
 	color:white;
 	font-size:34.0pt;
@@ -1017,7 +1041,7 @@ td
 	border-left:none;
 	background:#4F81BD;
 	mso-pattern:black none;}
-.xl184
+.xl188
 	{mso-style-parent:style0;
 	text-align:center;
 	vertical-align:middle;
@@ -1025,7 +1049,7 @@ td
 	border-right:.5pt solid windowtext;
 	border-bottom:none;
 	border-left:.5pt solid windowtext;}
-.xl185
+.xl189
 	{mso-style-parent:style0;
 	text-align:center;
 	vertical-align:middle;
@@ -1033,43 +1057,25 @@ td
 	border-right:.5pt solid windowtext;
 	border-bottom:none;
 	border-left:.5pt solid windowtext;}
-.xl186
-	{mso-style-parent:style17;
-	mso-number-format:0;
-	text-align:center;
-	vertical-align:middle;
-	border-top:.5pt solid windowtext;
-	border-right:none;
-	border-bottom:.5pt solid windowtext;
-	border-left:.5pt solid windowtext;}
-.xl187
-	{mso-style-parent:style17;
-	mso-number-format:0;
-	text-align:center;
-	vertical-align:middle;
-	border-top:.5pt solid windowtext;
-	border-right:.5pt solid windowtext;
-	border-bottom:.5pt solid windowtext;
-	border-left:none;}
-.xl188
-	{mso-style-parent:style17;
-	mso-number-format:"\#\,\#\#0\\ \0022Kč\0022";
-	text-align:center;
-	vertical-align:middle;
-	border-top:.5pt solid windowtext;
-	border-right:none;
-	border-bottom:.5pt solid windowtext;
-	border-left:.5pt solid windowtext;}
-.xl189
-	{mso-style-parent:style17;
-	mso-number-format:"\#\,\#\#0\\ \0022Kč\0022";
-	text-align:center;
-	vertical-align:middle;
-	border-top:.5pt solid windowtext;
-	border-right:.5pt solid windowtext;
-	border-bottom:.5pt solid windowtext;
-	border-left:none;}
 .xl190
+	{mso-style-parent:style17;
+	mso-number-format:"\#\,\#\#0\\ \0022Kč\0022";
+	text-align:center;
+	vertical-align:middle;
+	border-top:.5pt solid windowtext;
+	border-right:none;
+	border-bottom:.5pt solid windowtext;
+	border-left:.5pt solid windowtext;}
+.xl191
+	{mso-style-parent:style17;
+	mso-number-format:"\#\,\#\#0\\ \0022Kč\0022";
+	text-align:center;
+	vertical-align:middle;
+	border-top:.5pt solid windowtext;
+	border-right:.5pt solid windowtext;
+	border-bottom:.5pt solid windowtext;
+	border-left:none;}
+.xl192
 	{mso-style-parent:style0;
 	color:white;
 	font-size:34.0pt;
@@ -1078,31 +1084,13 @@ td
 	border:.5pt solid windowtext;
 	background:#4F81BD;
 	mso-pattern:black none;}
-.xl191
+.xl193
 	{mso-style-parent:style0;
 	color:windowtext;
 	text-align:center;
 	vertical-align:middle;
 	border-top:.5pt solid windowtext;
 	border-right:none;
-	border-bottom:none;
-	border-left:none;}
-.xl192
-	{mso-style-parent:style0;
-	color:windowtext;
-	text-align:center;
-	vertical-align:middle;
-	border-top:.5pt solid windowtext;
-	border-right:.5pt solid windowtext;
-	border-bottom:none;
-	border-left:none;}
-.xl193
-	{mso-style-parent:style0;
-	color:windowtext;
-	text-align:center;
-	vertical-align:middle;
-	border-top:none;
-	border-right:.5pt solid windowtext;
 	border-bottom:none;
 	border-left:none;}
 .xl194
@@ -1110,9 +1098,9 @@ td
 	color:windowtext;
 	text-align:center;
 	vertical-align:middle;
-	border-top:none;
-	border-right:none;
-	border-bottom:.5pt solid windowtext;
+	border-top:.5pt solid windowtext;
+	border-right:.5pt solid windowtext;
+	border-bottom:none;
 	border-left:none;}
 .xl195
 	{mso-style-parent:style0;
@@ -1121,9 +1109,27 @@ td
 	vertical-align:middle;
 	border-top:none;
 	border-right:.5pt solid windowtext;
-	border-bottom:.5pt solid windowtext;
+	border-bottom:none;
 	border-left:none;}
 .xl196
+	{mso-style-parent:style0;
+	color:windowtext;
+	text-align:center;
+	vertical-align:middle;
+	border-top:none;
+	border-right:none;
+	border-bottom:.5pt solid windowtext;
+	border-left:none;}
+.xl197
+	{mso-style-parent:style0;
+	color:windowtext;
+	text-align:center;
+	vertical-align:middle;
+	border-top:none;
+	border-right:.5pt solid windowtext;
+	border-bottom:.5pt solid windowtext;
+	border-left:none;}
+.xl198
 	{mso-style-parent:style0;
 	color:windowtext;
 	text-align:center;
@@ -1132,7 +1138,7 @@ td
 	border-right:none;
 	border-bottom:none;
 	border-left:.5pt solid windowtext;}
-.xl197
+.xl199
 	{mso-style-parent:style0;
 	font-family:Calibri;
 	mso-generic-font-family:auto;
