--- a/TKV2025_soubory/stylesheet.css
+++ b/TKV2025_soubory/stylesheet.css
@@ -832,38 +832,32 @@ td
 	mso-pattern:#4F81BD none;}
 .xl168
 	{mso-style-parent:style0;
-	color:white;
-	font-weight:700;
-	font-family:Calibri;
-	mso-generic-font-family:auto;
-	mso-font-charset:0;
-	text-align:left;
-	background:#4F81BD;
-	mso-pattern:black none;}
-.xl169
-	{mso-style-parent:style0;
 	text-align:center;
 	vertical-align:middle;
 	border-top:.5pt solid windowtext;
 	border-right:none;
 	border-bottom:.5pt solid windowtext;
 	border-left:none;}
-.xl170
+.xl169
 	{mso-style-parent:style17;
 	mso-number-format:0;
 	vertical-align:middle;
 	border:.5pt solid windowtext;}
-.xl171
+.xl170
 	{mso-style-parent:style16;
 	font-weight:700;
 	mso-number-format:"_-* \#\,\#\#0\\ \0022Kč\0022_-\;\\-* \#\,\#\#0\\ \0022Kč\0022_-\;_-* \0022-\0022??\\ \0022Kč\0022_-\;_-\@_-";
 	text-align:center;
 	vertical-align:middle;}
-.xl172
+.xl171
 	{mso-style-parent:style17;
 	mso-number-format:"0\.0";
 	vertical-align:middle;
 	border:.5pt solid windowtext;}
+.xl172
+	{mso-style-parent:style0;
+	font-size:12.0pt;
+	vertical-align:middle;}
 .xl173
 	{mso-style-parent:style0;
 	color:white;
@@ -1086,6 +1080,16 @@ td
 	mso-pattern:black none;}
 .xl193
 	{mso-style-parent:style0;
+	color:white;
+	font-weight:700;
+	font-family:Calibri;
+	mso-generic-font-family:auto;
+	mso-font-charset:0;
+	text-align:left;
+	background:#4F81BD;
+	mso-pattern:black none;}
+.xl194
+	{mso-style-parent:style0;
 	color:windowtext;
 	text-align:center;
 	vertical-align:middle;
@@ -1093,21 +1097,12 @@ td
 	border-right:none;
 	border-bottom:none;
 	border-left:none;}
-.xl194
-	{mso-style-parent:style0;
-	color:windowtext;
-	text-align:center;
-	vertical-align:middle;
-	border-top:.5pt solid windowtext;
-	border-right:.5pt solid windowtext;
-	border-bottom:none;
-	border-left:none;}
 .xl195
 	{mso-style-parent:style0;
 	color:windowtext;
 	text-align:center;
 	vertical-align:middle;
-	border-top:none;
+	border-top:.5pt solid windowtext;
 	border-right:.5pt solid windowtext;
 	border-bottom:none;
 	border-left:none;}
@@ -1117,10 +1112,19 @@ td
 	text-align:center;
 	vertical-align:middle;
 	border-top:none;
+	border-right:.5pt solid windowtext;
+	border-bottom:none;
+	border-left:none;}
+.xl197
+	{mso-style-parent:style0;
+	color:windowtext;
+	text-align:center;
+	vertical-align:middle;
+	border-top:none;
 	border-right:none;
 	border-bottom:.5pt solid windowtext;
 	border-left:none;}
-.xl197
+.xl198
 	{mso-style-parent:style0;
 	color:windowtext;
 	text-align:center;
@@ -1129,7 +1133,7 @@ td
 	border-right:.5pt solid windowtext;
 	border-bottom:.5pt solid windowtext;
 	border-left:none;}
-.xl198
+.xl199
 	{mso-style-parent:style0;
 	color:windowtext;
 	text-align:center;
@@ -1138,7 +1142,7 @@ td
 	border-right:none;
 	border-bottom:none;
 	border-left:.5pt solid windowtext;}
-.xl199
+.xl200
 	{mso-style-parent:style0;
 	font-family:Calibri;
 	mso-generic-font-family:auto;
